@@ -1704,7 +1704,7 @@ static void EditorCallbackExit()
 	// Denote cursor not on anything in window (used?)
 	CursorOn = CursorOnUnknown;
 
-	// Prevent scrolling while out of focus (on other applications) */
+	// Prevent scrolling while out of focus (on other applications)
 	KeyScrollState = MouseScrollState = ScrollNone;
 }
 
